fixtures/frontend/milestone-2/invalid/source-option-contract-parameter-signal-mismatch/main.aivi
type DecodeMode =
  | Strict
  | Permissive

type FsError =
  | Missing

type FsWatchEvent =
  | Changed

@source fs.read "/tmp/demo.txt" with {
    decode: Strict,
    reloadOn: Changed
}
sig fileText : Signal (Result FsError Text)
